<resources>
    <string name="app_name" translatable="false">UzWorks</string>
    <string name="zero" translatable="false">0</string>
    <string name="home">Уй</string>
    <string name="announcements">Эълонлар</string>
    <string name="chat">Чат</string>
    <string name="profile">Профил</string>
    <string name="get_started_title">
    <![CDATA[Орзуйингиздаги <font color="#FF9228">Иш</font> ва <font color="#FF9228">Ишчилар</font> Шу Ерда!]]>
</string>
    <string name="get_started_bottom">Ўзингиз учун қизиқ бўлган ва керак бўлган барча йўналишларда иш ва ишчиларни биз билан топинг</string>
    <string name="uz_latin">O\'zbekcha</string>
    <string name="uz_kirill">Ўзбекча</string>
    <string name="en">English</string>
    <string name="ru">Русский</string>
    <string name="view">Кўриш</string>
    <string name="job_category">Иш тури</string>
    <string name="gender">Жинс</string>
    <string name="male">Эркак</string>
    <string name="female">Аёл</string>
    <string name="unknown">Кўрсатилмаган</string>
    <string name="send_message">Хабар ёзиш</string>
    <string name="share">Улашиш</string>
    <string name="see_more">Батафсил кўриш</string>
    <string name="hide">Яшириш</string>
    <string name="delete">Ўчириш</string>
    <string name="content_description">ImageView content description</string>
    <string name="personal_information">Шахсий маълумотлар</string>
    <string name="first_name">Исм</string>
    <string name="last_name">Фамилия</string>
    <string name="birth_date">Туғилган сана</string>
    <string name="email">Эмаил</string>
    <string name="phone_number">Телефон рақам</string>
    <string name="phone_number_prefix">+998</string>
    <string name="logout">Чиқиш</string>
    <string name="confirm_logout">Ҳақиқатан ҳам чиқмоқчимисиз ?</string>
    <string name="yes">Ҳа</string>
    <string name="no">Йўқ</string>
    <string name="save">Сақлаш</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="current_password">Жорий парол</string>
    <string name="new_password">Янги парол</string>
    <string name="confirm_new_password">Янги паролни тасдиқланг</string>
    <string name="update_password">Паролни янгилаш</string>
    <string name="registration_succeeded">Рўйхатдан ўтиш муваффақиятли тугатилди</string>
    <string name="open_app">Давом этиш</string>
    <string name="create_account">Ҳисоб очиш</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="full_name">Исм фамилия</string>
    <string name="password">Парол</string>
    <string name="confirm_password">Паролни тасдиқланг</string>
    <string name="continue_sign_up">Давом этиш</string>
    <string name="sign_up_google">Google билан рўйхатдан ўтиш</string>
    <string name="sign_in_google">Google билан тизимга кириш</string>
    <string name="have_account">Ҳисобингиз борми?</string>
    <string name="do_not_have_account">Ҳисобингиз йўқми?</string>
    <string name="login">Тизимга кириш</string>
    <string name="settings">Созламалар</string>
    <string name="notifications">Билдиришномалар</string>
    <string name="dark_mode">Тунги режим</string>
    <string name="light_mode">Кундузги режим</string>
    <string name="language">Тил</string>
    <string name="select_role">Рол танланг</string>
    <string name="select_role_subtitle">Сиз ким эканлигингизни аниқ танлашингиз керак.
Сизга кўрсатиладиган маълумотлар танлаган ролингизга қараб аниқланади</string>
    <string name="employer">Иш берувчи</string>
    <string name="employee">Ишчи</string>
    <string name="sign_up">Рўйхатдан ўтиш</string>
    <string name="back_login">Логинга қайтиш</string>
    <string name="no_savings">Сақланган эълонлар мавжуд эмас</string>
    <string name="saved_announcements_not_found">Сизда сақланган эълонлар йўқ, илтимос, эълонларни сақлаш учун уни қидирувдан топинг</string>
    <string name="find_announcement">Эълон қидириш</string>
    <string name="about_me">Мен ҳақимда</string>
    <string name="experience">Тажриба</string>
    <string name="add_job_announcement">Иш учун эълон бериш</string>
    <string name="add_worker_announcement">Ишчи учун эълон бериш</string>
    <string name="welcome">Хуш келибсиз</string>
    <string name="about_job">Иш ҳақида тўлиқ маълумотлар</string>
    <string name="address">Манзил</string>
    <string name="salary">Маош</string>
    <string name="more_information">Кўпроқ маълумотлар</string>
    <string name="more">Кўпроқ</string>
    <string name="less">Қисқароқ</string>
    <string name="working_time">Иш вақти</string>
    <string name="working_schedule">Иш жадвали</string>
    <string name="benefit">Фойда</string>
    <string name="age_limit">Ёш учун талаб</string>
    <string name="requirements">Талаблар</string>
    <string name="social">Иштимоий тармоқлардан кўриш:</string>
    <string name="map_address">Харитада кўрсатилган манзил</string>
    <string name="contact">Алоқага чиқиш</string>
    <string name="contact_chat">Чат орқали</string>
    <string name="contact_telegram">Телеграм орқали</string>
    <string name="contact_phone">Телефон орқали</string>
    <string name="ad_title">50% офф\nРеклама учун катта чегирма ютиб олинг</string>
    <string name="join">Join now</string>
    <string name="statistics">Статистикалар</string>
    <string name="jobs">Ишлар</string>
    <string name="workers">Ишчилар</string>
    <string name="recommended_announcements">Таклиф қилинган эълонлар</string>
    <string name="no_recommended_announcements">Ҳозирча таклиф қилинган эълонлар мавжуд эмас</string>
    <string name="search_messages">Чатлардан қидиринг</string>
    <string name="messages">Чатлар</string>
    <string name="no_messages">Чатлар топилмади</string>
    <string name="messages_not_found">Сизда ҳозирда чатлар мавжуд эмас</string>
    <string name="return_home">Бош саҳифага қайтиш</string>
    <string name="online">Онлайн</string>
    <string name="enter_phone_number">Телефон рақамингизни киритинг</string>
    <string name="enter_full_name">Исм фамилиянгизни киритинг</string>
    <string name="enter_password">Паролни киритинг</string>
    <string name="password_requirements">Парол камида 8 белгидан иборат бўлиши, рақам ва кичик ҳарфларни ўз ичига олиши шарт</string>
    <string name="enter_old_password">Жорий паролни киритинг</string>
    <string name="enter_new_password">Янги паролни киритинг</string>
    <string name="deadline">Мухлат</string>
    <string name="title">Сарлавҳа</string>
    <string name="telegram_username">Телеграм профил</string>
    <string name="instagram_username">Instagram профил</string>
    <string name="orientation">Мўлжал</string>
    <string name="select_region">Вилоят танланг</string>
    <string name="select_district">Туман танланг</string>
    <string name="select_region_first">Олдин вилоят танланг</string>
    <string name="select_job_category">Иш турини танланг</string>
    <string name="min">Мин</string>
    <string name="max">Мах</string>
    <string name="select_location">Харитадан манзил танланг</string>
    <string name="current_location">Жорий манзил</string>
    <string name="select_map">Харитадан танлаш</string>
    <string name="loading">Юкланмоқда</string>
    <string name="user_not_found">Фойдаланувчи топилмади</string>
    <string name="greeting">Ассалому алайкум</string>
    <string name="subscribers_count">Обуначилар сони</string>
    <string name="enter_firstname">Исмингизни киритинг</string>
    <string name="enter_lastname">Фамилиянгизни киритинг</string>
    <string name="confirm_gender">Жинсингизни тасдиқланг</string>
    <string name="enter_valid_email">Яроқли эмаил киритинг</string>
    <string name="my_announcements">Менинг эълонларим</string>
    <string name="you_have_no_announcement">Сизда эълонлар мавжуд эмас</string>
    <string name="salary_per_time">/Ой</string>
    <string name="from">дан</string>
    <string name="until">гача</string>
    <string name="telegram">Телеграм</string>
    <string name="instagram">Инстаграм</string>
    <string name="about_worker">Ишчи ҳақида тўлиқ маълумотлар</string>
    <string name="job_address_dialog_message">Иш жой манзилини белгиланг</string>
    <string name="change_location">Манзилни ўзгартириш</string>
    <string name="no_experience">Тажриба йўқ</string>
    <string name="position">Лавозим</string>
    <string name="company_name">Компания номи</string>
    <string name="start_date">Бошланиш вақти</string>
    <string name="end_date">Тугаш вақти</string>
    <string name="deadline_error">Муддатни танланг</string>
    <string name="birthday_error">Туғилган кунингизни танланг</string>
    <string name="title_error">Сарлавҳани киритинг</string>
    <string name="salary_error">Иш ҳақини киритинг</string>
    <string name="working_time_error">Иш вақтини киритинг</string>
    <string name="working_schedule_error">Иш жадвалини киритинг</string>
    <string name="tg_username_error">Телеграм фойдаланувчи номингизни киритинг</string>
    <string name="phone_number_error">Телефон рақамингизни киритинг</string>
    <string name="orientation_error">Ориентациянгизни киритинг</string>
    <string name="district_error">Туманингизни танланг</string>
    <string name="job_category_error">Иш турини танланг</string>
    <string name="benefit_error">Фойдани киритинг</string>
    <string name="set_location">Тайёр</string>
    <string name="no_internet">Интернет алоқаси йўқ</string>
    <string name="unavailable_date">Бу санани танлаб бўлмайди, камида 16 йил олдинни танланг</string>
    <string name="enter_phone_number_password">Платформага кириш учун телефон рақамингиз ва паролингизни киритинг</string>
    <string name="sign_up_floor">Профиль яратиш учун исмингизни, телефон рақамингизни ва шахсий паролингизни киритинг</string>
    <string name="second">секунд</string>
    <string name="seconds">секунд</string>
    <string name="minute">минут</string>
    <string name="minutes">минут</string>
    <string name="hour">соат</string>
    <string name="hours">соат</string>
    <string name="day">кун</string>
    <string name="days">кун</string>
    <string name="week">ҳафта</string>
    <string name="weeks">ҳафта</string>
    <string name="month">ой</string>
    <string name="months">ой</string>
    <string name="year">йил</string>
    <string name="years">йил</string>
    <string name="chat_coming_soon">Чат тез кунларда…</string>
    <string name="position_error">Лавозимингизни киритинг</string>
    <string name="company_name_error">Компания номини киритинг</string>
    <string name="start_date_error">Бошланган вақтини киритинг</string>
    <string name="end_date_error">Тугаган вақтини киритинг</string>
    <string name="address_failed">Манзил юкланмади</string>
    <string name="close">Ёпиш</string>
    <string name="user_exist">Бу телефон рақами аллақачон рўйхатдан ўтган, агар бу сизнинг рақамингиз бўлса, ҳисобингизга киришингиз мумкин, акс ҳолда рўйхатдан ўтиш учун бошқа рақамни танлашингиз мумкин.</string>
    <string name="update_succeeded">Муваффақиятли янгиланди</string>
    <string name="current_password_wrong">Жорий пароль нотўғри</string>
    <string name="password_updated">Пароль мувафақиятли ўзгартирилди</string>
    <string name="edit">Таҳрирлаш</string>
    <string name="confirm_delete_announcement">Ҳақиқатдан ушбу эълонни ўчирмоқчимисиз ?</string>
    <string name="money_unit">сўм</string>
    <string name="forgot_password">Паролни унутдингизми ?</string>
    <string name="forgot_password_explanation">Тасдиқлаш кодини олиш ва паролни тиклаш учун пастга телефон рақамингизни киритинг</string>
    <string name="verification_title">Тасдиқлаш кодини киритинг</string>
    <string name="verification_subtitle">Илтимос, телефон рақамингизга юборилган тасдиқлаш кодини киритинг</string>
    <string name="set_new_password">Янги пароль ўрнатинг</string>
    <string name="submit">Юбориш</string>
</resources>