<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.announcement.AddJobFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/ic_left_arrow"
            android:title="@string/add_job_announcement"
            android:titleTextColor="@color/black_blue"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/stretcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/black_blue"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/announcement_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/stretcher">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_et"
                android:theme="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/salary_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:theme="@style/TextInputEditTextStyle"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:digits="1234567890"
                    android:hint="@string/salary"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/working_time_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:helperText="@string/working_time_helper"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/yellow"
                android:theme="@style/TextInputEditTextStyle"
                android:hint="@string/working_time"
                app:endIconTint="@color/black_blue"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/working_schedule_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/working_schedule_helper"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/yellow"
                android:layout_marginTop="@dimen/_10sdp"
                android:theme="@style/TextInputEditTextStyle"
                android:hint="@string/working_schedule"
                app:endIconTint="@color/black_blue"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tg_user_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputEditTextStyle"
                android:layout_marginTop="@dimen/_10sdp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/telegram_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/benefit_et"
                android:layout_width="match_parent"
                android:theme="@style/TextInputEditTextStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/benefit"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/requirement_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputEditTextStyle"
                android:layout_marginTop="@dimen/_10sdp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/requirements"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/age_limit"
                android:textColor="@color/black_blue"
                android:textSize="@dimen/_12ssp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/min_age_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:theme="@style/TextInputEditTextStyle"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:digits="1234567890"
                        android:hint="@string/min"
                        android:maxLength="2"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:minWidth="@dimen/_70sdp"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/max_age_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:layout_constraintRight_toRightOf="parent"
                    android:theme="@style/TextInputEditTextStyle"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:digits="1234567890"
                        android:hint="@string/max"
                        android:minWidth="@dimen/_100sdp"
                        android:maxLength="2"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/select_location"
                android:textColor="@color/black_blue"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/select_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/select_map" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                app:drawableEndCompat="@drawable/ic_copy" />

            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/deadline"
                app:drawableEndCompat="@drawable/ic_calendar" />

            <include
                android:id="@+id/gender_layout"
                layout="@layout/gender_choice_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/address" />

            <TextView
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/select_region"
                app:drawableEndCompat="@drawable/ic_down_arrow" />

            <TextView
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/select_region_first"
                app:drawableEndCompat="@drawable/ic_down_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/job_category" />

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_tv_background"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/select_job_category"
                app:drawableEndCompat="@drawable/ic_down_arrow" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:backgroundTint="@color/black_blue"
                    android:text="@string/save"
                    app:cardCornerRadius="@dimen/_7sdp"
                    android:theme="@style/ButtonStyle"
                    android:background="@drawable/bordered_button_background"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:paddingHorizontal="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_7sdp"
                    android:text="@string/cancel"
                    app:cardElevation="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:theme="@style/ButtonStyle"
                    android:background="@drawable/bordered_button_background"
                    app:layout_constraintTop_toTopOf="@id/save_btn"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>