<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.ForgotPasswordFragment">

    <ImageView
        android:contentDescription="@string/content_description"
        android:id="@+id/back"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:padding="@dimen/_1sdp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_30ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="match_parent"
        android:theme="@style/SecondaryTextStyle"
        android:fontFamily="@font/dm_sans_regular"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/forgot_password_explanation"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.8"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/phone_number"
        app:errorEnabled="false"
        android:theme="@style/TextInputEditTextStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_2"
        app:layout_constraintBottom_toTopOf="@id/submit_btn">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:background="@drawable/enabled_button_background"
        android:layout_width="match_parent"
        android:text="@string/submit"
        android:layout_height="@dimen/_34sdp"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="true"
        android:theme="@style/ButtonStyle"
        android:layout_marginEnd="@dimen/_23sdp"
        app:layout_constraintBottom_toTopOf="@id/back_login_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_login_btn"
        android:layout_height="@dimen/_34sdp"
        android:layout_width="match_parent"
        android:background="@drawable/enabled_button_background"
        android:text="@string/back_login"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginEnd="@dimen/_23sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:backgroundTint="@color/white_blue"
        app:cardCornerRadius="@dimen/_5sdp"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>